@@ -1,3 +1,8 @@
+2006-02-20	ujwal
+
+	* Rolled back _updateDisplayThread change in PseudoTerminal since that broke the
+	  the anti-idle processing in non-current sessions.
+
 2006-02-19	ujwal
 
 	* _updateDisplayThread in PseudoTerminal updates only current session since
